adjust metadata for post

--- a/src/posts/thirsty-bot-deep-dive.mdx
+++ b/src/posts/thirsty-bot-deep-dive.mdx
@@ -28,13 +28,13 @@ import {
 } from '@fortawesome/pro-regular-svg-icons';
 import { Caption, Checklist } from '../interactivePosts/ThirstyBot';
 
-export const title = 'Building an AI Web Application in 72 Hours';
+export const title = 'Building an AI-Powered Web Application in 72 Hours';
 export const slug = 'ai-app-in-72-hours';
-export const tags = ['javascript', 'React', 'Next.js'];
+export const tags = ['javascript', 'React', 'Next.js', 'software', 'AI'];
 export const description =
   'A deep dive into Thirsty Bot, an AI-powered cocktail generator I built in 72 hours';
 export const cover = 'thirsty-bot-deep-dive-cover.png';
-export const published = new Date(2024, 3, 8);
+export const published = new Date(2024, 3, 7);
 export const shortCodes = ['thirsty-bot-deep-dive', 'ai-app'];
 
 A few days ago I [introduced Thirsty Bot](https://keegan.codes/blog/introducing-thirsty-bot),
