--- a/src/posts/vercel-deployment-protection.mdx
+++ b/src/posts/vercel-deployment-protection.mdx
@@ -1,6 +1,6 @@
 export const title = 'How to Use Vercel Deployment Protection with Next.js RSC';
 export const slug = 'how-to-use-vercel-deployment-protection-next-rsc';
-export const tags = ['javascript'];
+export const tags = ['javascript', 'Next.js'];
 export const description =
   "A look at what's required to enable Vercel deployment protection for client & server components";
 export const cover = 'vercel-deployment-protection-cover.png';
