add producthunt badge

--- a/src/posts/thirsty-bot-deep-dive.mdx
+++ b/src/posts/thirsty-bot-deep-dive.mdx
@@ -37,6 +37,27 @@ export const cover = 'thirsty-bot-deep-dive-cover.png';
 export const published = new Date(2024, 3, 7);
 export const shortCodes = ['thirsty-bot-deep-dive', 'ai-app'];
 
+<div style={{ display: 'flex', paddingBottom: '2rem' }}>
+  <a
+    href="https://www.producthunt.com/posts/thirsty-bot?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-thirsty&#0045;bot"
+    target="_blank"
+    style={{
+      marginLeft: 'auto',
+    }}
+  >
+    <img
+      src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=449375&theme=neutral"
+      alt="Thirsty&#0032;Bot - Your&#0032;Cocktail&#0045;Making&#0032;AI&#0032;Assistant&#0033; | Product Hunt"
+      style={{
+        width: '250px',
+        height: '54px',
+      }}
+      width="250"
+      height="54"
+    />
+  </a>
+</div>
+
 A few days ago I [introduced Thirsty Bot](https://keegan.codes/blog/introducing-thirsty-bot),
 an AI-powered web application
 that helps you find cocktail recipes based on the ingredients you have at home. I built the app in 72
@@ -752,3 +773,24 @@ opportunity to look back on what I built, and the areas I could improve the app!
 > If you haven't tried it yet and this post got you interested, you can sign up for free at [thirsty.bot](https://thirsty.bot)!
 > Don't forget to use the code `KEEGANCODES10` for 10 free credits, in addition to the 5 credits you get
 > just for signing up.
+
+<div style={{ display: 'flex', paddingTop: '2rem' }}>
+  <a
+    href="https://www.producthunt.com/posts/thirsty-bot?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-thirsty&#0045;bot"
+    target="_blank"
+    style={{
+      margin: '0 auto',
+    }}
+  >
+    <img
+      src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=449375&theme=neutral"
+      alt="Thirsty&#0032;Bot - Your&#0032;Cocktail&#0045;Making&#0032;AI&#0032;Assistant&#0033; | Product Hunt"
+      style={{
+        width: '250px',
+        height: '54px',
+      }}
+      width="250"
+      height="54"
+    />
+  </a>
+</div>
