--- a/src/posts/thirsty-bot-deep-dive.mdx
+++ b/src/posts/thirsty-bot-deep-dive.mdx
@@ -32,7 +32,7 @@ export const title = 'Building an AI-Powered Web Application in 72 Hours';
 export const slug = 'ai-app-in-72-hours';
 export const tags = ['javascript', 'React', 'Next.js', 'software', 'AI'];
 export const description =
-  'A deep dive into Thirsty Bot, an AI-powered cocktail generator I built in 72 hours';
+  'A technical deep dive into Thirsty Bot, an AI-powered cocktail generator I built over a weekend';
 export const cover = 'thirsty-bot-deep-dive-cover.png';
 export const published = new Date(2024, 3, 7);
 export const shortCodes = ['thirsty-bot-deep-dive', 'ai-app'];
