add one more video

--- a/src/posts/thirsty-bot-deep-dive.mdx
+++ b/src/posts/thirsty-bot-deep-dive.mdx
@@ -35,6 +35,7 @@ export const description =
   'A technical deep dive into Thirsty Bot, an AI-powered cocktail generator I built over a weekend';
 export const cover = 'thirsty-bot-deep-dive-cover.png';
 export const published = new Date(2024, 3, 7);
+export const updated = new Date(2024, 3, 8);
 export const shortCodes = ['thirsty-bot-deep-dive', 'ai-app'];
 
 <div style={{ display: 'flex', paddingBottom: '2rem' }}>
@@ -263,6 +264,29 @@ favorite ingredients that I left off the list.
 > ingredients, so users aren't limited to the ones I've pre-defined. If you continue
 > reading into my architecture discussion, I cover a bit about the challenges associated
 > with that.
+
+<video
+  width="100%"
+  height="auto"
+  controls
+  preload="metadata"
+  style={{
+    paddingBottom: '1rem',
+    paddingTop: '1rem',
+  }}
+>
+  <source
+    src="https://video.static.donley.xyz/thirsty-bot-full-demo.mp4"
+    type="video/mp4"
+  />
+  Your browser does not support the video tag.
+</video>
+
+<Caption>
+
+    Here's a demo of the state of the application at the time of publishing!
+
+</Caption>
 
 ## Up Next: Application Architecture
 
