switch badge URL

--- a/src/posts/thirsty-bot-deep-dive.mdx
+++ b/src/posts/thirsty-bot-deep-dive.mdx
@@ -40,7 +40,7 @@ export const shortCodes = ['thirsty-bot-deep-dive', 'ai-app'];
 
 <div style={{ display: 'flex', paddingBottom: '2rem' }}>
   <a
-    href="https://www.producthunt.com/products/thirsty-bot"
+    href="https://www.producthunt.com/posts/thirsty-bot?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-thirsty&#0045;bot"
     target="_blank"
     style={{
       marginLeft: 'auto',
@@ -800,7 +800,7 @@ opportunity to look back on what I built, and the areas I could improve the app!
 
 <div style={{ display: 'flex', paddingTop: '2rem' }}>
   <a
-    href="https://www.producthunt.com/products/thirsty-bot"
+    href="https://www.producthunt.com/posts/thirsty-bot?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-thirsty&#0045;bot"
     target="_blank"
     style={{
       margin: '0 auto',
