switch to highlightjs for code syntax

--- a/src/posts/thirsty-bot-deep-dive.mdx
+++ b/src/posts/thirsty-bot-deep-dive.mdx
@@ -174,16 +174,7 @@ could store and return a recipe
 and an image, and the ability to see your finished product. No loading states yet, and the selection of available
 ingredients was tiny.
 
-<video
-  width="100%"
-  height="auto"
-  controls
-  preload="metadata"
-  style={{
-    paddingBottom: '1rem',
-    paddingTop: '1rem',
-  }}
->
+<video width="100%" height="auto" controls preload="metadata">
   <source
     src="https://video.static.donley.xyz/thirsty-bot-demo_day-1.mp4"
     type="video/mp4"
@@ -213,16 +204,7 @@ and most of the afternoon was spent on wiring things back up.
 The first half of my demo video below shows the progress on the desktop site, and the second half
 shows the new mobile experience:
 
-<video
-  width="100%"
-  height="auto"
-  controls
-  preload="metadata"
-  style={{
-    paddingBottom: '1rem',
-    paddingTop: '1rem',
-  }}
->
+<video width="100%" height="auto" controls preload="metadata">
   <source
     src="https://video.static.donley.xyz/thirsty-bot-demo_day-2.mp4"
     type="video/mp4"
@@ -265,16 +247,7 @@ favorite ingredients that I left off the list.
 > reading into my architecture discussion, I cover a bit about the challenges associated
 > with that.
 
-<video
-  width="100%"
-  height="auto"
-  controls
-  preload="metadata"
-  style={{
-    paddingBottom: '1rem',
-    paddingTop: '1rem',
-  }}
->
+<video width="100%" height="auto" controls preload="metadata">
   <source
     src="https://video.static.donley.xyz/thirsty-bot-full-demo.mp4"
     type="video/mp4"
